fix header +  profile alignment issues

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -15,5 +15,7 @@
     .header__logo{
         max-width: 126px;
         max-height: 24px;
+        margin-bottom: 32px;
+        margin-left: 24px;
     }
 }
