--- a/blocks/page.css
+++ b/blocks/page.css
@@ -21,7 +21,7 @@
 
 @media screen and (max-width: 320px) {
     .page {
-        padding: 0 19px;
+        padding: 0;
     }
     
 }
