--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -27,6 +27,9 @@
     font-size: 42px;
     line-height: 1.15;
     grid-area: title;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .profile__edit-button{
@@ -54,6 +57,10 @@
     line-height: 1.2;
     grid-area: description;
     max-width: 415px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+
 }
 
 .profile__add-button{
@@ -75,7 +82,7 @@
 
 @media screen and (max-width: 765px){
     .profile__title{
-        font-size: 28px;
+        font-size: 38px;
     }
     
     .profile__description{
@@ -84,6 +91,10 @@
 
     .profile__edit-button{
         margin-top: 5px;
+    }
+
+    .profile__add-button{
+        max-width: 282px;
     }
 }
 
